tests/snapshots/examples_fixtures/aoc__2025__aoc_day2_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day2_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/aoc/2025/aoc_day2_part1.flx:10:9
   |
10 |         first(parsed_range)
   |         ^^^^^

Hint:
  Define it first: let first = ...;


error[E004]: Undefined Variable

I can't find a value named `last`.

  examples/aoc/2025/aoc_day2_part1.flx:14:9
   |
14 |         last(parsed_range)
   |         ^^^^

Hint:
  Define it first: let last = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/aoc/2025/aoc_day2_part1.flx:53:4
   |
53 | |> filter(/t -> trim(t) != "")
   |    ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day2_part1.flx:55:21
   |
55 | let parsed_ranges = [parse_range_token(t) | t <- range_tokens]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day2_part1.flx:59:4
   |
59 | |> fold(0, /(acc, x) -> if x > acc { x } else { acc })
   |    ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day2_part1.flx:62:4
   |
62 | |> map(/seed -> invalid_from_seed(seed))
   |    ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day2_part1.flx:66:4
   |
66 | |> fold(false, /(found, r) -> if found { true } else { id_in_range(id, r) })
   |    ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `sum`.

  examples/aoc/2025/aoc_day2_part1.flx:68:59
   |
68 | let total = invalid_candidates |> filter(in_any_range) |> sum
   |                                                           ^^^

Hint:
  Define it first: let sum = ...;

Found 8 errors.
== stdout ==
<not executed>
